force-app/main/default/objects/Deduction__c/Deduction__c.object-meta.xml
<CustomObject>
    <label>Note Detail</label>
    <nameField>
        <displayFormat>NOTEDTL-{0000}</displayFormat>
        <label>Detail Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Note Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>