force-app/main/default/objects/Deduction__c/fields/Accounting_Notes__c.field-meta.xml
<CustomField>
    <fullName>Accounting_Notes__c</fullName>
    <label>Accounting Note</label>
    <referenceTo>Accounting_Notes__c</referenceTo>
    <relationshipLabel>Note Details</relationshipLabel>
    <relationshipName>Deductions</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>