force-app/main/default/objects/Deduction__c/fields/Advance_No__c.field-meta.xml
<CustomField>
    <fullName>Advance_No__c</fullName>
    <formula>IF(ISBLANK(Advance__r.Advance_Offset_No__c), Advance__r.Advance_No__c, &apos;&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Advance No</label>
    <type>Text</type>
</CustomField>