force-app/main/default/objects/Deduction__c/fields/Advance_Offset_No__c.field-meta.xml
<CustomField>
    <fullName>Advance_Offset_No__c</fullName>
    <formula>Advance__r.Advance_Offset_No__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Advance Offset No</label>
    <type>Text</type>
</CustomField>