force-app/main/default/objects/Deduction__c/fields/Deduction_Fee_Code__c.field-meta.xml
<CustomField>
    <fullName>Deduction_Fee_Code__c</fullName>
    <label>Deduction Fee Code</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Fee_Code</valueSetName>
    </valueSet>
</CustomField>