force-app/main/default/objects/Deduction__c/fields/Deduction_GST_Amount__c.field-meta.xml
<CustomField>
    <fullName>Deduction_GST_Amount__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Deduction GST Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>