force-app/main/default/objects/Deduction__c/fields/Deduction_GST_Code__c.field-meta.xml
<CustomField>
    <fullName>Deduction_GST_Code__c</fullName>
    <label>Deduction GST Code</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>GST_Code</valueSetName>
    </valueSet>
</CustomField>