force-app/main/default/objects/Deduction__c/fields/Excess_Flag__c.field-meta.xml
<CustomField>
    <fullName>Excess_Flag__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Excess Flag</label>
    <type>Checkbox</type>
</CustomField>