force-app/main/default/objects/Deduction__c/fields/Invoice_Line_Item__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Line_Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Invoice Line Item</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Accounting Note is not selected</errorMessage>
        <filterItems>
            <field>$Source.Accounting_Notes__c</field>
            <operation>notEqual</operation>
            <value></value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Invoice_Line_Item__c</referenceTo>
    <relationshipLabel>Note Details</relationshipLabel>
    <relationshipName>Deductions</relationshipName>
    <type>Lookup</type>
</CustomField>