force-app/main/default/objects/Deduction__c/fields/Receipt_Reference_No__c.field-meta.xml
<CustomField>
    <fullName>Receipt_Reference_No__c</fullName>
    <formula>IF(ISBLANK(Advance__c), Invoice_Line_Item__r.Receipt_Reference_No__c, &apos;&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Receipt Reference No</label>
    <type>Text</type>
</CustomField>