force-app/main/default/objects/Deduction__c/recordTypes/Detail_with_Deductions.recordType-meta.xml
<RecordType>
    <fullName>Detail_with_Deductions</fullName>
    <active>true</active>
    <label>Detail with Deductions</label>
</RecordType>